tests/negative/neg_own_anon_reassign_join.safe
-- Test: neg_own_anon_reassign_join
-- Description: Anonymous access reassignment remains illegal after CFG join.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.3.p100a:ba849e66
-- Expected: REJECT anonymous_access_reassign

package anonymous_Reassign_Join_Test

   type data is record
      value : integer;


   type data_Ptr is access data;

   function reassign_After_Join (pick : integer)
      Owner : data_Ptr = new ((value = 1) as data);
      Other : data_Ptr = new ((value = 2) as data);
      Ref   : access data;

      if pick == 0
         Ref = Owner;
      else


      Ref = Other;  -- ERROR: merge must not reset init-only tracking


